[package]
name = "dbus-native"
keywords = ["D-Bus", "DBus"]
license = "Apache-2.0/MIT"
version = "0.1.0"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
byteorder = "1.3"
lazy_static = "1.2"

[dev-dependencies]
quickcheck = { version = "0.8"}